Intercorporate feedback from google doc (#141)
Changes based on google docs feedback:

- translate site subtitle to czech
- add link to FAQ on occupations from homepage
- add phone numbers to home and FAQ
- add occupations list to about
- add contacts to about
- update UNI link to link to ICT related section


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -58,10 +58,13 @@
 }
 
 .home-header-tag-line {
+    display: block;
     font-size: 26px;
     font-weight: 400;
     line-height: 1.1em;
     margin: 12px 0;
+    color: $dark-color;
+    text-decoration: none;
 
     @include tablet {
         text-align: center;
