--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -22,6 +22,8 @@
 }
 
 .single-page-description {
+    display: flex;
+    flex-direction: column;
     line-height: 1.7em;
     font-weight: 600;
     font-size: 18px;
