--- a/assets/scss/_faq.scss
+++ b/assets/scss/_faq.scss
@@ -104,6 +104,10 @@
         .third & {
             list-style-type: "\1F499\0009";
         }
+
+        &.occupations-list {
+            max-width: 100%;
+        }
     }
 
     .first & a {
