added extra sentence to statutes page (#147)
Extra sentence


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -88,6 +88,16 @@
     font-size: 16px;
 }
 
+.single-page-header-extra-statutes {
+    line-height: 1.7em;
+    font-size: 16px;
+    padding-top: 8px;
+
+    p {
+        margin: 12px 0;
+    }
+}
+
 .single-page-header-download-link {
     color: $secondary-color;
 }
