Small fixes of typos/bugs (#148)
- Replace usage of "-" with "–"
- Fix links in contacts list (about page) and change the bracket to
(phone/Signal) to make it similar as in footer.
- Fix some typos

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/shortcodes/contacts.html
+++ b/layouts/shortcodes/contacts.html
@@ -1,5 +1,5 @@
 {{ $pageLang := .Page.Lang }}
 <ul class="contact-list">
-  <li><strong>{{ i18n "Email" }}</strong>: <a href="{{ .Site.Param "support_email"}}">{{ .Site.Param "support_email"}}</a></li>
-  <li><strong>{{ i18n "Phone Number" }}</strong>: <a href="{{ .Site.Param "support_phone"}}">{{ .Site.Param "support_phone"}}</a> <small>(Signal Messenger)</small></li>
+  <li><strong>{{ i18n "Email" }}</strong>: <a href="mailto:{{ .Site.Param "support_email"}}">{{ .Site.Param "support_email"}}</a></li>
+  <li><strong>{{ i18n "Phone Number" }}</strong>: <a href="tel:{{ .Site.Param "support_phone"}}">{{ .Site.Param "support_phone"}}</a> <small>({{ i18n "phone" }}/Signal)</small></li>
 </ul>
