Refactor snake case to camle case (#152)
I made a mistake of using snake_case on some places. Go (Hugo) is using
camelCase so we should use it as well for sake of consistency of param
names.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,14 +15,14 @@
           {{ i18n "download" }}: <a class="single-page-header-download-link" target="_blank" href="/downloads/{{ .Page.Param "download"}}">{{ .Page.Param "download"}}</a>
         </div>
       {{ end }}
-      
-      {{ if isset .Page.Params "extra_statutes_subtitle" }}
-		  <div class="single-page-header-extra-statutes">
-			{{ .Param "extra_statutes_subtitle" }}
-				{{ if isset .Page.Params "extra_statutes_link" }}
-					<a class="single-page-header-download-link" target="_blank" href="{{ .Page.Param "extra_statutes_link" }}">{{ .Page.Param "extra_statutes_link"}}</a>
-				{{ end }}
-		  </div>
+
+      {{ if isset .Page.Params "extraStatutesSubtitle" }}
+        <div class="single-page-header-extra-statutes">
+          {{ .Param "extraStatutesSubtitle" }}
+          {{ if isset .Page.Params "extraStatutesLink" }}
+            <a class="single-page-header-download-link" target="_blank" href="{{ .Page.Param "extraStatutesLink" }}">{{ .Page.Param "extraStatutesLink"}}</a>
+          {{ end }}
+        </div>
       {{ end }}
     </div>
   </section>
