Fixed social media icons interaction with AdBlock (#154)
Fixed social media icons interaction with AdBlock


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_icons.scss
+++ b/assets/scss/_icons.scss
@@ -1,13 +1,13 @@
 // See: https://www.dafont.com/icons-social-media-8.font
 // as a reference for gliphs
 @font-face {
-    font-family: 'icons-social-media-8';
-    src: url('/font/icons-social-media-8/IconsSocialMedia8.eot'); /* IE9 Compat Modes */
-    src: url('/font/icons-social-media-8/IconsSocialMedia8.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-        url('/font/icons-social-media-8/IconsSocialMedia8.woff2') format('woff2'), /* Super Modern Browsers */
-        url('/font/icons-social-media-8/IconsSocialMedia8.woff') format('woff'), /* Pretty Modern Browsers */
-        url('/font/icons-social-media-8/IconsSocialMedia8.ttf')  format('truetype'), /* Safari, Android, iOS */
-        url('IconsSocialMedia8.svg#IconsSocialMedia8') format('svg'); /* Legacy iOS */
+    font-family: 'icons8';
+    src: url('/font/icons/icons8.eot'); /* IE9 Compat Modes */
+    src: url('/font/icons/icons8.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('/font/icons/icons8.woff2') format('woff2'), /* Super Modern Browsers */
+        url('/font/icons/icons8.woff') format('woff'), /* Pretty Modern Browsers */
+        url('/font/icons/icons8.ttf')  format('truetype'), /* Safari, Android, iOS */
+        url('icons.svg#icons8') format('svg'); /* Legacy iOS */
     font-weight: normal;
     font-style: normal;
     font-display: block;
@@ -20,16 +20,16 @@
 }
 
 .icon {
-    font-family: 'icons-social-media-8';
+    font-family: 'icons8';
     line-height: inherit;
     color: inherit;
 
     @include icon('rss', 'r');
-    @include icon('twitter', 't');
+    @include icon('bird_site', 't');
     @include icon('facebook', 'f');
-    @include icon('linkedin', 'i');
+    @include icon('job_site', 'i');
     @include icon('github', '<');
-    @include icon('youtube', 'y');
+    @include icon('video_site', 'y');
     @include icon('mastodon', ']');
-    @include icon('instagram', 'c');
+    @include icon('photo_site', 'c');
 }
