--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -29,22 +29,22 @@
           <h4 class="site-footer-title">{{ .Param "footer.socials" }}</h4>
           <div class="site-footer-social-links">
             {{ if .Site.Param "social.twitter" }}
-              <a target="_blank" href="{{ .Site.Param "social.twitter" }}"><span class="icon twitter"></span></a>
+              <a target="_blank" href="{{ .Site.Param "social.twitter" }}"><span class="icon bird_site"></span></a>
             {{ end }}
             {{ if .Site.Param "social.facebook" }}
               <a target="blank" href="{{ .Site.Param "social.facebook" }}"><span class="icon facebook"></span></a>
             {{ end }}
             {{ if .Site.Param "social.linkedin" }}
-              <a target="blank" href="{{ .Site.Param "social.linkedin" }}"><span class="icon linkedin"></span></a>
+              <a target="blank" href="{{ .Site.Param "social.linkedin" }}"><span class="icon job_site"></span></a>
             {{ end }}
             {{ if .Site.Param "social.github" }}
               <a target="blank" href="{{ .Site.Param "social.github" }}"><span class="icon github"></span></a>
             {{ end }}
             {{ if .Site.Param "social.youtube" }}
-              <a target="blank" href="{{ .Site.Param "social.youtube" }}"><span class="icon youtube"></span></a>
+              <a target="blank" href="{{ .Site.Param "social.youtube" }}"><span class="icon video_site"></span></a>
             {{ end }}
 			{{ if .Site.Param "social.instagram" }}
-              <a target="blank" href="{{ .Site.Param "social.instagram" }}"><span class="icon instagram"></span></a>
+              <a target="blank" href="{{ .Site.Param "social.instagram" }}"><span class="icon photo_site"></span></a>
             {{ end }}
             {{ if .Site.Param "social.mastodon" }}
               <a target="blank" href="{{ .Site.Param "social.mastodon" }}"><span class="icon mastodon"></span></a>
