improve membership section of homepage (#158)
Some minor improvements to members section of homepage.

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -217,6 +217,10 @@
 .home-membership {
     background: $secondary-color;
     padding: 64px 0;
+
+    p {
+        margin: 6px 0;
+    }
 }
 
 .home-membership-container {
