Improve text alignment (#160)
Based on some feedback I got this improves text alignment in long
blocks. Also fixes regression of extra content in statutes not showing
up

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -97,6 +97,11 @@
     p {
         @include pharagraph;
         margin: 20px 0;
+        text-align: justify;
+
+        @include mobile {
+            text-align: left;
+        }
     }
 
     strong {
@@ -128,6 +133,7 @@
         list-style-type: square;
         padding: 12px 0 12px 52px;
         font-weight: 500;
+        text-align: left;
 
         li {
             margin: 12px 0;
@@ -139,6 +145,11 @@
         list-style-type: numeric;
         line-height: 1.5em;
         padding: 12px 0 12px 22px;
+        text-align: justify;
+
+        @include mobile {
+            text-align: left;
+        }
 
         li {
             padding: 8px 0;
