--- a/assets/scss/_faq.scss
+++ b/assets/scss/_faq.scss
@@ -81,6 +81,11 @@
     p {
         @include pharagraph;
         margin: 12px 0;
+        text-align: justify;
+
+        @include mobile {
+            text-align: left;
+        }
     }
 
     strong {
@@ -96,6 +101,7 @@
         padding: 0 0 0 28px;
         font-weight: 600;
         max-width: 700px;
+        text-align: left;
 
         li {
             margin: 6px 0;
