--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -74,6 +74,10 @@
         text-align: center;
     }
 
+    @include mobile {
+        min-height: 110px;
+    }
+
     &:hover {
         background: $dark-color;
         border-radius: 6px;
@@ -114,6 +118,10 @@
     &::after {
         content: '\2581';
         animation: blinkTextCursor 800ms steps(44) infinite normal;
+    }
+
+    @include mobile {
+        display: block;
     }
 }
 
