Small fixes - typos, css, layout (#163)
- fixes typos in czech version
- fixes some minor CSS issues
- fixes HTML layout for registration


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/register/list.html
+++ b/layouts/register/list.html
@@ -120,7 +120,7 @@
                   <button data-role="upload" type="button">{{ i18n "Upload" }}</button>
                   <button class="register-signature-clear-btn" data-role="clear" type="button">Clear</button>
                 </div>
-                <span class="register-signature-drag-info">{{ i18n "dnd in place" }}</button>
+                <span class="register-signature-drag-info">{{ i18n "dnd in place" }}</span>
               </div>
 
               <div class="register-signature-signing">
