Remove dependecy on google fonts (#165)
It's better not to depend on google fonts so it's clear we're not
sharing any data with 3rd parties.

Btw this was quite tedious to get right :D

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,8 +12,9 @@ but it makes long term maintainanece much simpler.
 @import "../../node_modules/leaflet/dist/leaflet";
 @import "../../node_modules/vanillajs-datepicker/sass/datepicker";
 
-// Load icons font support
+// fonts support
 @import "icons";
+@import "fonts";
 
 // Load Pieces
 @import "configuration";
