--- a/assets/scss/_icons.scss
+++ b/assets/scss/_icons.scss
@@ -7,7 +7,7 @@
         url('/font/icons/icons8.woff2') format('woff2'), /* Super Modern Browsers */
         url('/font/icons/icons8.woff') format('woff'), /* Pretty Modern Browsers */
         url('/font/icons/icons8.ttf')  format('truetype'), /* Safari, Android, iOS */
-        url('icons.svg#icons8') format('svg'); /* Legacy iOS */
+        url('/font/icons/icons8.svg#icons8') format('svg'); /* Legacy iOS */
     font-weight: normal;
     font-style: normal;
     font-display: block;
