--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -9,15 +9,16 @@
         url('/font/AbrilFatface/abrilfatface-regular-webfont.woff') format('woff'), /* pretty modern browsers */
         url('/font/AbrilFatface/abrilfatface-regular-webfont.ttf')  format('truetype'), /* safari, android, ios */
         url('/font/AbrilFatface/abrilfatface-regular-webfont.svg#abrilfatface-regular-webfont') format('svg'); /* legacy ios */
+    unicode-range: U+0001-FB04;
 }
 
 @font-face {
     font-family:'Merriweather Sans';
     src: url('/font/MerriweatherSans/Merriweather Sans Bold.eot');
-	src: url('/font/MerriweatherSans/Merriweather Sans Bold.eot?#iefix') format('embedded-opentype'),
-		url('/font/MerriweatherSans/Merriweather Sans Bold.woff2') format('woff2'),
-		url('/font/MerriweatherSans/Merriweather Sans Bold.woff') format('woff'),
-		url('/font/MerriweatherSans/Merriweather Sans Bold.svg#Merriweather Sans Bold') format('svg');
+    src: url('/font/MerriweatherSans/Merriweather Sans Bold.eot?#iefix') format('embedded-opentype'),
+        url('/font/MerriweatherSans/Merriweather Sans Bold.woff2') format('woff2'),
+        url('/font/MerriweatherSans/Merriweather Sans Bold.woff') format('woff'),
+        url('/font/MerriweatherSans/Merriweather Sans Bold.svg#Merriweather Sans Bold') format('svg');
     font-weight: 700;
     font-style: normal;
     font-stretch: normal;
@@ -27,10 +28,10 @@
 @font-face {
     font-family:'Merriweather Sans';
     src: url('/font/MerriweatherSans/Merriweather Sans Bold Italic.eot');
-	src: url('/font/MerriweatherSans/Merriweather Sans Bold Italic.eot?#iefix') format('embedded-opentype'),
-		url('/font/MerriweatherSans/Merriweather Sans Bold Italic.woff2') format('woff2'),
-		url('/font/MerriweatherSans/Merriweather Sans Bold Italic.woff') format('woff'),
-		url('/font/MerriweatherSans/Merriweather Sans Bold Italic.svg#Merriweather Sans Bold Italic') format('svg');
+    src: url('/font/MerriweatherSans/Merriweather Sans Bold Italic.eot?#iefix') format('embedded-opentype'),
+        url('/font/MerriweatherSans/Merriweather Sans Bold Italic.woff2') format('woff2'),
+        url('/font/MerriweatherSans/Merriweather Sans Bold Italic.woff') format('woff'),
+        url('/font/MerriweatherSans/Merriweather Sans Bold Italic.svg#Merriweather Sans Bold Italic') format('svg');
     font-weight: 700;
     font-style: italic;
     font-stretch: normal;
@@ -40,10 +41,10 @@
 @font-face {
     font-family:'Merriweather Sans';
     src: url('/font/MerriweatherSans/Merriweather Sans ExtraBold.eot');
-	src: url('/font/MerriweatherSans/Merriweather Sans ExtraBold.eot?#iefix') format('embedded-opentype'),
-		url('/font/MerriweatherSans/Merriweather Sans ExtraBold.woff2') format('woff2'),
-		url('/font/MerriweatherSans/Merriweather Sans ExtraBold.woff') format('woff'),
-		url('/font/MerriweatherSans/Merriweather Sans ExtraBold.svg#Merriweather Sans ExtraBold') format('svg');
+    src: url('/font/MerriweatherSans/Merriweather Sans ExtraBold.eot?#iefix') format('embedded-opentype'),
+        url('/font/MerriweatherSans/Merriweather Sans ExtraBold.woff2') format('woff2'),
+        url('/font/MerriweatherSans/Merriweather Sans ExtraBold.woff') format('woff'),
+        url('/font/MerriweatherSans/Merriweather Sans ExtraBold.svg#Merriweather Sans ExtraBold') format('svg');
     font-weight: 800;
     font-style: normal;
     font-stretch: normal;
@@ -53,10 +54,10 @@
 @font-face {
     font-family:'Merriweather Sans';
     src: url('/font/MerriweatherSans/Merriweather Sans ExtraBold Italic.eot');
-	src: url('/font/MerriweatherSans/Merriweather Sans ExtraBold Italic.eot?#iefix') format('embedded-opentype'),
-		url('/font/MerriweatherSans/Merriweather Sans ExtraBold Italic.woff2') format('woff2'),
-		url('/font/MerriweatherSans/Merriweather Sans ExtraBold Italic.woff') format('woff'),
-		url('/font/MerriweatherSans/Merriweather Sans ExtraBold Italic.svg#Merriweather Sans ExtraBold Italic') format('svg');
+    src: url('/font/MerriweatherSans/Merriweather Sans ExtraBold Italic.eot?#iefix') format('embedded-opentype'),
+        url('/font/MerriweatherSans/Merriweather Sans ExtraBold Italic.woff2') format('woff2'),
+        url('/font/MerriweatherSans/Merriweather Sans ExtraBold Italic.woff') format('woff'),
+        url('/font/MerriweatherSans/Merriweather Sans ExtraBold Italic.svg#Merriweather Sans ExtraBold Italic') format('svg');
     font-weight: 800;
     font-style: italic;
     font-stretch: normal;
@@ -66,10 +67,10 @@
 @font-face {
     font-family:'Merriweather Sans';
     src: url('/font/MerriweatherSans/Merriweather Sans Italic.eot');
-	src: url('/font/MerriweatherSans/Merriweather Sans Italic.eot?#iefix') format('embedded-opentype'),
-		url('/font/MerriweatherSans/Merriweather Sans Italic.woff2') format('woff2'),
-		url('/font/MerriweatherSans/Merriweather Sans Italic.woff') format('woff'),
-		url('/font/MerriweatherSans/Merriweather Sans Italic.svg#Merriweather Sans Italic') format('svg');
+    src: url('/font/MerriweatherSans/Merriweather Sans Italic.eot?#iefix') format('embedded-opentype'),
+        url('/font/MerriweatherSans/Merriweather Sans Italic.woff2') format('woff2'),
+        url('/font/MerriweatherSans/Merriweather Sans Italic.woff') format('woff'),
+        url('/font/MerriweatherSans/Merriweather Sans Italic.svg#Merriweather Sans Italic') format('svg');
     font-weight: 400;
     font-style: italic;
     font-stretch: normal;
@@ -79,10 +80,10 @@
 @font-face {
     font-family:'Merriweather Sans';
     src: url('/font/MerriweatherSans/Merriweather Sans Light.eot');
-	src: url('/font/MerriweatherSans/Merriweather Sans Light.eot?#iefix') format('embedded-opentype'),
-		url('/font/MerriweatherSans/Merriweather Sans Light.woff2') format('woff2'),
-		url('/font/MerriweatherSans/Merriweather Sans Light.woff') format('woff'),
-		url('/font/MerriweatherSans/Merriweather Sans Light.svg#Merriweather Sans Light') format('svg');
+    src: url('/font/MerriweatherSans/Merriweather Sans Light.eot?#iefix') format('embedded-opentype'),
+        url('/font/MerriweatherSans/Merriweather Sans Light.woff2') format('woff2'),
+        url('/font/MerriweatherSans/Merriweather Sans Light.woff') format('woff'),
+        url('/font/MerriweatherSans/Merriweather Sans Light.svg#Merriweather Sans Light') format('svg');
     font-weight: 300;
     font-style: normal;
     font-stretch: normal;
@@ -92,10 +93,10 @@
 @font-face {
     font-family:'Merriweather Sans';
     src: url('/font/MerriweatherSans/Merriweather Sans Light Italic.eot');
-	src: url('/font/MerriweatherSans/Merriweather Sans Light Italic.eot?#iefix') format('embedded-opentype'),
-		url('/font/MerriweatherSans/Merriweather Sans Light Italic.woff2') format('woff2'),
-		url('/font/MerriweatherSans/Merriweather Sans Light Italic.woff') format('woff'),
-		url('/font/MerriweatherSans/Merriweather Sans Light Italic.svg#Merriweather Sans Light Italic') format('svg');
+    src: url('/font/MerriweatherSans/Merriweather Sans Light Italic.eot?#iefix') format('embedded-opentype'),
+        url('/font/MerriweatherSans/Merriweather Sans Light Italic.woff2') format('woff2'),
+        url('/font/MerriweatherSans/Merriweather Sans Light Italic.woff') format('woff'),
+        url('/font/MerriweatherSans/Merriweather Sans Light Italic.svg#Merriweather Sans Light Italic') format('svg');
     font-weight: 300;
     font-style: italic;
     font-stretch: normal;
@@ -105,10 +106,10 @@
 @font-face {
     font-family:'Merriweather Sans';
     src: url('/font/MerriweatherSans/Merriweather Sans Regular.eot');
-	src: url('/font/MerriweatherSans/Merriweather Sans Regular.eot?#iefix') format('embedded-opentype'),
-		url('/font/MerriweatherSans/Merriweather Sans Regular.woff2') format('woff2'),
-		url('/font/MerriweatherSans/Merriweather Sans Regular.woff') format('woff'),
-		url('/font/MerriweatherSans/Merriweather Sans Regular.svg#Merriweather Sans Regular') format('svg');
+    src: url('/font/MerriweatherSans/Merriweather Sans Regular.eot?#iefix') format('embedded-opentype'),
+        url('/font/MerriweatherSans/Merriweather Sans Regular.woff2') format('woff2'),
+        url('/font/MerriweatherSans/Merriweather Sans Regular.woff') format('woff'),
+        url('/font/MerriweatherSans/Merriweather Sans Regular.svg#Merriweather Sans Regular') format('svg');
     font-weight: 400;
     font-style: normal;
     font-stretch: normal;
