--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,7 +25,7 @@
         <a href="{{ ref . "faq" }}">{{ .Site.Param "navigation.faq" }}</a>
       </li>
     </ul>
-    <select class="langauge-selector" onchange="switchLanguage(this.value)">
+    <select class="language-selector" onchange="switchLanguage(this.value)">
       {{ $siteLanguages := site.Languages }}
       {{ $pageLang := .Page.Lang }}
       {{- range .Page.AllTranslations }}
