--- a/layouts/register/list.html
+++ b/layouts/register/list.html
@@ -25,7 +25,7 @@
             <fieldset class="register-fieldset">
               <div class="register-form-field">
                 <label class="register-form-label">{{ i18n "Email" }}:
-                  <input class="register-form-input" name="email" type="email" placeholder="{{ i18n "jane.doe@email.com" }}" autofocus />
+                  <input class="register-form-input" name="email" type="email" placeholder="{{ i18n "jane.doe@email.com" }}" />
                 </label>
               </div>
             </fieldset>
