--- a/assets/scss/_site-styles.scss
+++ b/assets/scss/_site-styles.scss
@@ -1,11 +1,4 @@
 body, html {
-.site-footer-nav-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    line-height: 2em;
-    font-weight: 400;
-}
     font-family: $main-font;
     height: 100%;
     padding: 0;
@@ -115,7 +108,14 @@ body {
     }
 }
 
-.langauge-selector {
+.language-selector {
+    font-family: $main-font;
+    padding: 4px;
+    background: $very-mutted-color;
+    border: 2px solid $very-mutted-color;
+    border-radius: 3px;
+    outline: $mutted-color;
+
     @include tablet {
         margin-bottom: 24px;
     }
@@ -298,4 +298,12 @@ ul.contact-list {
     small {
         font-size: 12px;
     }
+}
+
+.site-footer-nav-ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    line-height: 2em;
+    font-weight: 400;
 }
