Improve statements integration (#174)
Improve statements integration into the web.

- add page listing statements
- improve statements detail page
- focus on functionality around sharing of statements

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]
[anonymized]
[anonymized]

--- a/assets/scss/_events.scss
+++ b/assets/scss/_events.scss
@@ -171,11 +171,7 @@
 }
 
 .event-detail-info-title {
-    font-size: 38px;
-    font-weight: 800;
-    letter-spacing: -2px;
-    margin-bottom: -18px;
-    color: $very-mutted-color;
+    @include right-side-title;
 }
 
 .event-detail-info-table {
