--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -3,7 +3,7 @@
 {{ end }}
 
 {{ define "content" }}
-  <section class="single-page-header">
+  <section class="about-page-header">
     <div class="single-page-header-content">
       <h1 class="single-page-title">{{ .Title }}</h1>
       <div class="single-page-description">
@@ -15,6 +15,10 @@
           {{ i18n "download" }}: <a class="single-page-header-download-link" target="_blank" href="/downloads/{{ .Page.Param "download"}}">{{ .Page.Param "download"}}</a>
         </div>
       {{ end }}
+      <nav class="single-page-sub-nav">
+        <a class="active" href="{{ ref . "about" }}">{{ i18n "info" }}</a>
+        <a href="{{ ref . "statements" }}">{{ i18n "statements" }}</a>
+      </nav>
     </div>
   </section>
   <main class="about-page-body">
